--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <h1>Wallet App</h1>
+    <div class="auth-container">
+      <div class="auth-content">
+        <div class="auth-content-container">
+          <img src="src/img/logo.png" alt="Logo Wallet App" />
+          <h3 class="full-width text-left mt larger">Bem-vindo!</h3>
+          <p class="mt small">
+            Digite seu e-mail abaixo para ter acesso à aplicação financeira
+            Wallet, e ter uma melhor controle dos seus gastos mensais.
+          </p>
+          <label class="mt" for="input-email">E-mail</label>
+          <input
+            placeholder="email@example.com"
+            type="email"
+            name="input-email"
+            class="mt smaller"
+            id="input-email"
+          />
+          <button class="full-width mt large">Acessar</button>
+          <a class="mt larger">Não tem conta? Faça seu cadastro aqui</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
