--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
             placeholder="email@example.com"
             type="email"
             name="input-email"
-            class="mt smaller"
             id="input-email"
+            class="mt smaller"
           />
-          <button class="full-width mt large">Acessar</button>
-          <a class="mt larger">Não tem conta? Faça seu cadastro aqui</a>
+          <button onclick="onClickLogin()" class="full-width mt large">
+            Acessar
+          </button>
+          <a class="mt larger" href="src/pages/register/index.html"
+            >Não tem conta? Faça seu cadastro aqui</a
+          >
         </div>
       </div>
     </div>
