--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="auth-container">
       <div class="auth-content">
         <div class="auth-content-container">
-          <img src="src/img/logo.png" alt="Logo Wallet App" />
+          <img src="src/img/logo.png" alt="Logo Wallet App" class="logo" />
           <h3 class="full-width text-left mt larger">Bem-vindo!</h3>
           <p class="mt small">
             Digite seu e-mail abaixo para ter acesso à aplicação financeira
